# songling-car-navigation

./: README.md
docs/howto/: Navigation.md  README.md
docs/img/: README.md
docs/survey/: README.md  camera_survey.md
src/Navigation/: README.md
src/Navigation/common/ack_test/: CMakeLists.txt  package.xml
src/Navigation/common/ack_test/launch/: ack_test.launch
src/Navigation/dependencies/base_vel_mux/launch/: base_vel_mux.launch
src/Navigation/dependencies/base_vel_mux/param/: config.yaml
src/Navigation/dependencies/nav_goals/: CMakeLists.txt  README.md  package.xml
src/Navigation/dependencies/nav_goals/include/: nav_goals.h
src/Navigation/dependencies/nav_goals/launch/: nav_goals.launch
src/Navigation/dependencies/nav_goals/src/: nav_goals.cpp  nav_goals_node.cpp
src/Navigation/dependencies/pointcloud_to_laserscan/launch/: point2laser.launch
src/Navigation/dependencies/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
src/Navigation/dependencies/robot_localization/launch/: ekf_template.launch  pgv_test.launch  pgv_ukf.launch  rf2o_ekf.launch  ukf_template.launch
src/Navigation/dependencies/robot_localization/params/: ekf_template.yaml  pgv_ ekf.yaml  pgv_test.yaml  pgv_ukf.yaml  rf2o_ekf_params.yaml
src/Navigation/dependencies/yocs_velocity_smoother/param/: standalone.yaml
src/Navigation/detection/detected_objects_visualizer/src/: visualize_detected_objects.cpp  visualize_rects.cpp
src/Navigation/detection/lidar_detection/: CMakeLists.txt
src/Navigation/detection/lidar_detection/include/: lidar_detection_core.h
src/Navigation/detection/lidar_detection/launch/: test_lidar_detection.launch
src/Navigation/detection/lidar_detection/src/: lidar_detection_core.cpp  lidar_detection_node.cpp
src/Navigation/drivers/car_controller/: CMakeLists.txt  package.xml
src/Navigation/drivers/car_controller/src/: car_controller.cpp
src/Navigation/drivers/imu/lpms_imu/src/: lpms_imu_node.cpp
src/Navigation/drivers/rplidar/rviz/: rplidar.rviz
src/Navigation/drivers/rplidar/src/: node.cpp
src/Navigation/drivers/rtk/xrobot/: CMakeLists.txt  README.md  package.xml
src/Navigation/drivers/rtk/xrobot/include/: Converter.h  rtk_pose.h  xbot_pose.h
src/Navigation/drivers/rtk/xrobot/launch/: xrobot_driver.launch  xrobot_test.launch
src/Navigation/drivers/rtk/xrobot/msg/: rtk.msg
src/Navigation/drivers/rtk/xrobot/src/: Converter.cpp  rtk_pose.cpp  xbot_pose.cpp  xbot_pose_node.cpp
src/Navigation/filter/pcl_passthrough_filter/: CMakeLists.txt  package.xml
src/Navigation/filter/pcl_passthrough_filter/launch/: pcl_passthrough_filter.launch
src/Navigation/filter/pcl_passthrough_filter/src/: pcl_passthrough_filter.cpp
src/Navigation/filter/ray_ground_filter/launch/: ray_ground_filter.launch
src/Navigation/navigation/ackermann_navigation/: CMakeLists.txt  package.xml
src/Navigation/navigation/ackermann_navigation/config/: .arduino.yaml.swp
src/Navigation/navigation/ackermann_navigation/config/teb/: costmap_common_params.yaml
src/Navigation/navigation/ackermann_navigation/config/teb/carlike/: teb_local_planner_params.yaml
src/Navigation/navigation/ackermann_navigation/config/traversability_map/: traversability_global_costmap_params.yaml  traversability_local_costmap_params.yaml
src/Navigation/navigation/ackermann_navigation/include/: gmapping.launch.xml
src/Navigation/navigation/ackermann_navigation/launch/: .create_map.launch.swp  bringup_smoother.launch
src/Navigation/navigation/ackermann_navigation/launch/odometry/: dwa_move_base.launch.xml  ekf.launch  lidar_amcl_nav.launch  lidar_nav.launch  teb_move_base.launch
src/Navigation/navigation/ackermann_navigation/launch/rf2o/: rf2o_ekf.launch  rf2o_ekf_no_tf.launch  rf2o_gmapping.launch.xml  rf2o_lidar_nav.launch  rf2o_move_base.launch  rf2o_ndt_mapping.launch  rf2o_teb.launch  rf2o_test.launch
src/Navigation/navigation/ackermann_navigation/launch/traversability_map/: traversability_move_base.launch
src/Navigation/planning/global_planning/launch/: global_planning_smartcat.launch  load_path.launch
src/Navigation/planning/global_planning/rviz/: global_plan_lanecross.rviz
src/Navigation/planning/global_planning/src/: global_plan_node.cpp  load_static_path.cpp
src/Navigation/planning/local_planner/: CMakeLists.txt  package.xml
src/Navigation/planning/local_planner/include/local_trajectory_generator/: DetectedObjectArray.h  local_trajectory_generator.h
src/Navigation/planning/local_planner/include/rollout_generator/: rollout_generator.h
src/Navigation/planning/local_planner/launch/: local_trajectory_generator.launch  op_planner.launch  rollout_generator.launch
src/Navigation/planning/local_planner/nodes/local_trajectory_generator/: local_trajectory_generator.cpp  path_sub.cpp
src/Navigation/planning/local_planner/nodes/rollout_generator/: rollout_generator.cpp
src/Navigation/planning/mpc_follower/: CMakeLists.txt
src/Navigation/planning/mpc_follower/include/mpc_follower/: mpc_follower_core.h
src/Navigation/planning/mpc_follower/launch/: mpc_follower.launch
src/Navigation/planning/mpc_follower/src/: mpc_follower_core.cpp  mpc_waypoints_converter.cpp
src/Navigation/planning/waypoint_follower/: CMakeLists.txt  package.xml
src/Navigation/planning/waypoint_follower/include/: pure_pursuit_core.h
src/Navigation/planning/waypoint_follower/launch/: pure_pursuit.launch
src/Navigation/planning/waypoint_follower/lib/: libwaypoint_follower.cpp
src/Navigation/planning/waypoint_follower/src/: pure_pursuit.cpp  pure_pursuit_core.cpp
src/Navigation/rviz/: default.rviz  ndt_mapping.rviz  ndt_matching.rviz  op_planner_sim.rviz  open_planner.rviz
tools/: README.md
